[package]
name = "multi-pipeline"
version = "0.1.0"
edition = "2021"
description = "A flexible, async pipeline workflow framework"
license = "MIT"

[dependencies]
tokio = { version = "1.39.1", features = ["full", "signal"] }
async-trait = "0.1.86"
anyhow = "1.0.95"
tracing = "0.1.40"
serde = { version = "1.0.209", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-rustls"] }
uuid = { version = "1.13.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.11"
serde_json = "1.0.127"
